# webhook-relay

./: .envrc  .gitignore  Cargo.toml  docker-compose.yml  flake.nix  rust-toolchain.toml
.cargo/: config.toml
.github/workflows/: build.yaml  main.yaml  pr-unlabel.yaml  pr.yaml
api/: Cargo.toml  build.rs
api/src/: lib.rs
client/: Cargo.toml
client/src/: auth.rs  config.rs  grpc.rs  lib.rs  main.rs  proxy.rs
common/: Cargo.toml
common/src/: auth.rs  config.rs  lib.rs  relay_client.rs
keycloak/: realm-export.json
mcp-client/: Cargo.toml
mcp-client/src/: lib.rs  main.rs  mcp.rs
nix/flakemodules/: formatter.nix  nixshell.nix  packages.nix
nix/lib/: import.nix
proto/: relay.proto
server/: Cargo.toml
server/src/: auth.rs  client_manager.rs  config.rs  grpc.rs  http.rs  lib.rs  main.rs
tests/: Cargo.toml
tests/src/: e2e.rs  lib.rs  mcp.rs
