[[bin]]
name = "client"
path = "src/main.rs"

[dependencies]
api = {path = "../api"}
common = {path = "../common"}
base64 = "0.22"
anyhow.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tokio-stream.workspace = true
toml.workspace = true
tonic.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

[lib]
name = "client"
path = "src/lib.rs"

[package]
name = "client"
edition.workspace = true
version.workspace = true
