[dependencies]
api = {path = "../api"}
fs4 = "0.13"
anyhow.workspace = true
async-trait.workspace = true
dirs.workspace = true
keyring.workspace = true
oauth2.workspace = true
open.workspace = true
reqwest.workspace = true
serde.workspace = true
tokio.workspace = true
tokio-stream.workspace = true
toml.workspace = true
tonic.workspace = true
tracing.workspace = true

[package]
name = "common"
edition.workspace = true
version.workspace = true
