[[bin]]
name = "mcp-client"
path = "src/main.rs"

[dependencies]
api = {path = "../api"}
common = {path = "../common"}
base64 = "0.22"
fs4 = "0.13"
anyhow.workspace = true
dirs.workspace = true
keyring.workspace = true
open.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tokio-stream.workspace = true
toml.workspace = true
tonic.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

[lib]
name = "mcp_client"
path = "src/lib.rs"

[package]
name = "mcp-client"
edition.workspace = true
version.workspace = true
