[[bin]]
name = "server"
path = "src/main.rs"

[dependencies]
api = {path = "../api"}
tokio-util = {version = "0.7", features = ["rt"]}
x509-parser = "0.17"
sha2 = "0.10"
anyhow.workspace = true
axum.workspace = true
hex.workspace = true
jsonwebtoken.workspace = true
rand.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
tokio-stream.workspace = true
tonic.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
uuid.workspace = true

[package]
name = "server"
edition.workspace = true
version.workspace = true

[target.'cfg(target_env = "musl")'.dependencies]
mimalloc = "0.1"
