[dependencies]
api = {path = "../api"}
client = {path = "../client"}
common = {path = "../common"}
server = {path = "../server"}
mcp-client = {path = "../mcp-client"}
anyhow.workspace = true
async-trait.workspace = true
axum.workspace = true
chrono.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tokio-stream.workspace = true
tonic.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

# This crate only contains integration tests
[lib]
name = "test_helpers"
path = "src/lib.rs"

[package]
name = "tests"
edition.workspace = true
version.workspace = true

[[test]]
name = "e2e"
path = "src/e2e.rs"

[[test]]
name = "mcp"
path = "src/mcp.rs"
